<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="66dp">

        <LinearLayout
            android:id="@+id/alarm_layout"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarm_name"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_alarm"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_label" />
        </LinearLayout>

        <Button
            android:id="@+id/on_off"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/alarm_layout"
            android:background="@color/red"
            android:text="@string/off" />
    </RelativeLayout>

</LinearLayout>